Разделил фотографии и видео на два независимых блока, скорректировал стили; убрал внеш отступ у мод блока .field--area

--- a/source/photo.html
+++ b/source/photo.html
@@ -51,71 +51,68 @@
         <p class="gallery__text text-description text-description--sub">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </header>
 
-      <div class="photo-gallery">
-        <ul class="photo-gallery__list">
-          <li class="photo-gallery__item photo-card">
-            <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
-            <div class="photo-card__info card-info">
-              <h3 class="card-info__title">Неродные просторы</h3>
-              <p class="card-info__author">Автор фото: Борис</p>
-            </div>
-            <div class="photo-card__likes likes">
-              <div class="likes__icon"></div>
-              <div class="likes__counter">1350</div>
-            </div>
-          </li>
-          <li class="photo-gallery__item photo-card">
-            <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
-            <div class="photo-card__info card-info">
-              <h3 class="card-info__title">Местная растительность</h3>
-              <p class="card-info__author">Автор фото: Сергей</p>
-            </div>
-            <div class="photo-card__likes likes">
-              <div class="likes__icon"></div>
-              <div class="likes__counter">143</div>
-            </div>
-          </li>
-          <li class="photo-gallery__item photo-card">
-            <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
-            <div class="photo-card__info card-info">
-              <h3 class="card-info__title">Дорога на север</h3>
-              <p class="card-info__author">Автор фото: Петр</p>
-            </div>
-            <div class="photo-card__likes likes">
-              <div class="likes__icon"></div>
-              <div class="likes__counter">96</div>
-            </div>
-          </li>
-          <li class="photo-gallery__item photo-card">
-            <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
-            <div class="photo-card__info card-info">
-              <h3 class="card-info__title">Мост дьявола</h3>
-              <p class="card-info__author">Автор фото: Антон</p>
-            </div>
-            <div class="photo-card__likes likes">
-              <div class="likes__icon"></div>
-              <div class="likes__counter">254</div>
-            </div>
-          </li>
-        </ul>
-        <!-- /.photo-gallery__list -->
-      </div>
-      <!-- /.photo-gallery -->
-
-      <div class="video">
-        <div class="video__header">
-          <h2 class="video__title text-title">Все еще сомневаетесь?</h2>
-          <p class="video__text text-description text-description--sub">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-        </div>
-        <div class="video__content">
-          <img src="img/video-mobile@1x.jpg" alt="Видео" class="video__picture">
-          <div class="video__player-interface">
+      <ul class="gallery__list">
+        <li class="gallery__item photo-card">
+          <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
+          <div class="photo-card__info card-info">
+            <h3 class="card-info__title">Неродные просторы</h3>
+            <p class="card-info__author">Автор фото: Борис</p>
           </div>
-        </div>
-      </div>
-      <!-- /.video -->
+          <div class="photo-card__likes likes">
+            <div class="likes__icon"></div>
+            <div class="likes__counter">1350</div>
+          </div>
+        </li>
+        <li class="gallery__item photo-card">
+          <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
+          <div class="photo-card__info card-info">
+            <h3 class="card-info__title">Местная растительность</h3>
+            <p class="card-info__author">Автор фото: Сергей</p>
+          </div>
+          <div class="photo-card__likes likes">
+            <div class="likes__icon"></div>
+            <div class="likes__counter">143</div>
+          </div>
+        </li>
+        <li class="gallery__item photo-card">
+          <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
+          <div class="photo-card__info card-info">
+            <h3 class="card-info__title">Дорога на север</h3>
+            <p class="card-info__author">Автор фото: Петр</p>
+          </div>
+          <div class="photo-card__likes likes">
+            <div class="likes__icon"></div>
+            <div class="likes__counter">96</div>
+          </div>
+        </li>
+        <li class="gallery__item photo-card">
+          <img src="https://via.placeholder.com/150x150" alt="Фото" class="photo-card__img">
+          <div class="photo-card__info card-info">
+            <h3 class="card-info__title">Мост дьявола</h3>
+            <p class="card-info__author">Автор фото: Антон</p>
+          </div>
+          <div class="photo-card__likes likes">
+            <div class="likes__icon"></div>
+            <div class="likes__counter">254</div>
+          </div>
+        </li>
+      </ul>
+      <!-- /.gallery__list -->
     </section>
     <!-- /.gallery -->
+
+    <section class="video">
+      <div class="video__header">
+        <h2 class="video__title text-title">Все еще сомневаетесь?</h2>
+        <p class="video__text text-description text-description--sub">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+      </div>
+      <div class="video__content">
+        <img src="img/video-mobile@1x.jpg" alt="Видео" class="video__picture">
+        <div class="video__player-interface">
+        </div>
+      </div>
+    </section>
+    <!-- /.video -->
 
     <footer class="page-footer">
       <span class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</span>
