--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,8 @@
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a href="#" class="page-header__logo logo">
-        <img width="102" height="84" src="img/logo-sedona-mobile.svg" alt="Логотип">
+      <a class="page-header__logo logo">
+        <img src="img/logo-sedona-mobile.svg" alt="Логотип">
       </a>
       <div class="main-nav__wrapper">
         <nav class="main-nav visually-hidden">
@@ -48,7 +48,7 @@
             Приветствие
           </h2>
           <div class="intro__background">
-            <img src="img/text-sedona-index.svg" alt="Welcome to SEDONA" class="intro__background-img">
+            <img src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/text-sedona-index.svg" alt="Welcome to SEDONA" class="intro__background-img">
           </div>
           <div class="intro__decoration"></div>
         </header>
@@ -69,11 +69,13 @@
         <ul class="advantages__list">
           <li class="advantages__item advantage">
             <div class="advantage__header advantage__header--explicit">
-              <h3 class="advantage__title advantage__title--explicit text-title">НАСТОЯЩИЙ ГОРОДОК</h3>
-              <p class="advantage__number advantage__number--explicit text-description">— №1 —</p>
-              <p class="advantage__description advantage__description--explicit text-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+              <div class="advantage__header-wrapper">
+                <h3 class="advantage__title advantage__title--explicit text-title">НАСТОЯЩИЙ ГОРОДОК</h3>
+                <p class="advantage__number advantage__number--explicit text-description">— №1 —</p>
+                <p class="advantage__description advantage__description--explicit text-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+              </div>
             </div>
-            <img class="advantage__img" src="https://via.placeholder.com/150x150" alt="Фото города">
+            <img class="advantage__img" src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/main-city-mobile@1x.jpg" alt="Фото города">
             <div class="advantage__details detail">
               <div class="detail__item">
                 <div class="detail__header">
@@ -101,31 +103,39 @@
           </li>
           <li class="advantages__item advantage">
             <div class="advantage__header advantage__header--explicit">
-              <h3 class="advantage__title advantage__title--explicit text-title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
-              <p class="advantage__number advantage__number--explicit text-description">— №2 —</p>
-              <p class="advantage__description advantage__description--explicit text-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              <div class="advantage__header-wrapper">
+                <h3 class="advantage__title advantage__title--explicit text-title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+                <p class="advantage__number advantage__number--explicit text-description">— №2 —</p>
+                <p class="advantage__description advantage__description--explicit text-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              </div>
             </div>
-            <img class="advantage__img" src="https://via.placeholder.com/150x150" alt="Фото города">
+            <img class="advantage__img" src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/main-bridge-mobile@1x.jpg" alt="Фото города">
           </li>
           <li class="advantages__item advantage">
             <div class="advantage__header">
-              <h3 class="advantage__title text-title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
-              <p class="advantage__number text-description">— №3 —</p>
-              <p class="advantage__description text-description">ВСЕ интересные места находятся очень близко</p>
-            </div>
-          </li>
-          <li class="advantages__item advantage">
-            <div class="advantage__header">
-              <h3 class="advantage__title text-title">КРАСИВАЯ ДОРОГА</h3>
-              <p class="advantage__number text-description">— №4 —</p>
-              <p class="advantage__description text-description">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
+              <div class="advantage__header-wrapper">
+                <h3 class="advantage__title text-title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+                <p class="advantage__number text-description">— №3 —</p>
+                <p class="advantage__description text-description">ВСЕ интересные места находятся очень близко</p>
+              </div>
             </div>
           </li>
           <li class="advantages__item advantage">
             <div class="advantage__header">
-              <h3 class="advantage__title text-title">МАЛО ТУРИСТОВ</h3>
-              <p class="advantage__number text-description">— №5 —</p>
-              <p class="advantage__description text-description">Большинство едет в гранд каньони толпится там</p>
+              <div class="advantage__header-wrapper">
+                <h3 class="advantage__title text-title">КРАСИВАЯ ДОРОГА</h3>
+                <p class="advantage__number text-description">— №4 —</p>
+                <p class="advantage__description text-description">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
+              </div>
+            </div>
+          </li>
+          <li class="advantages__item advantage">
+            <div class="advantage__header">
+              <div class="advantage__header-wrapper">
+                <h3 class="advantage__title text-title">МАЛО ТУРИСТОВ</h3>
+                <p class="advantage__number text-description">— №5 —</p>
+                <p class="advantage__description text-description">Большинство едет в гранд каньони толпится там</p>
+              </div>
             </div>
           </li>
         </ul>
