--- a/source/photo.html
+++ b/source/photo.html
@@ -7,8 +7,8 @@
 </head>
 <body class="page__body">
   <header class="page-header">
-    <a href="#" class="logo page-header__logo">
-      <img width="102" height="84" src="https://via.placeholder.com/150x150" alt="Логотип">
+    <a href="index.html" class="logo page-header__logo">
+      <img src="img/logo-sedona-mobile.svg" alt="Логотип">
     </a>
     <div class="main-nav__wrapper">
       <nav class="main-nav visually-hidden">
