--- a/source/index.html
+++ b/source/index.html
@@ -7,33 +7,31 @@
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a class="page-header__logo logo">
+      <a class="page-header__logo">
         <img src="img/logo-sedona-mobile.svg" alt="Логотип">
       </a>
-      <div class="main-nav__wrapper">
-        <nav class="main-nav visually-hidden">
-          <button class="main-nav__toggle" type="button">
-            <span class="visually-hidden">Открыть меню</span>
-          </button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a class="site-list__link" href="#">Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="photo.html">Фото и видео</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="form.html">Форма Отзыва</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="#">HTML ACADEMY</a>
-            </li>
-          </ul>
-          <!-- /.site-list -->
-        </nav>
-        <!-- /.main-nav -->
-      </div>
-      <!-- /.main-nav__wrapper -->
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a class="site-list__link" href="#">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="photo.html">Фото и видео</a>
+          </li>
+          <li class="site-list__item site-list__item--logo"></li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="form.html">Форма Отзыва</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="#">HTML ACADEMY</a>
+          </li>
+        </ul>
+        <!-- /.site-list -->
+      </nav>
+      <!-- /.main-nav -->
     </header>
     <!-- /.page-header -->
 
@@ -75,32 +73,42 @@
                 <p class="advantage__description advantage__description--explicit text-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
               </div>
             </div>
-            <img class="advantage__img" src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/main-city-mobile@1x.jpg" alt="Фото города">
-            <div class="advantage__details detail">
-              <div class="detail__item">
-                <div class="detail__header">
-                  <div class="detail__icon"></div>
-                  <p class="detail__title text-title">ЖИЛЬЕ</p>
-                </div>
-                <p class="detail__description text-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-              </div>
-              <div class="detail__item">
-                <div class="detail__header">
-                  <div class="detail__icon"></div>
-                  <p class="detail__title text-title">СУВЕНИРЫ</p>
-                </div>
-                <p class="detail__description text-description">Не только китайского, но и местного производства!</p>
-              </div>
-              <div class="detail__item">
-                <div class="detail__header">
-                  <div class="detail__icon"></div>
-                  <p class="detail__title text-title">ЕДА</p>
-                </div>
-                <p class="detail__description text-description">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
-              </div>
-            </div>
-            <!-- /.advantage__details -->
           </li>
+          <!-- /.advantages__item -->
+          <li class="advantages__item advantage advantage-pic">     <!-- ! можно для блока advantage с фото сделать мод advantage--pic? -->
+            <img class="advantage__img" src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/main-city-mobile@1x.jpg" alt="Фото города">
+          </li>
+          <!-- /.advantages__item -->
+          <li class="advantages__item advantage detail">
+            <div class="detail__item">
+              <div class="detail__header">
+                <div class="detail__icon"></div>
+                <p class="detail__title text-title">ЖИЛЬЕ</p>
+              </div>
+              <p class="detail__description text-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </div>
+          </li>
+          <!-- /.advantages__item -->
+          <li class="advantages__item advantage detail">
+            <div class="detail__item">
+              <div class="detail__header">
+                <div class="detail__icon"></div>
+                <p class="detail__title text-title">СУВЕНИРЫ</p>
+              </div>
+              <p class="detail__description text-description">Не только китайского, но и местного производства!</p>
+            </div>
+          </li>
+          <!-- /.advantages__item -->
+          <li class="advantages__item advantage detail">
+            <div class="detail__item">
+              <div class="detail__header">
+                <div class="detail__icon"></div>
+                <p class="detail__title text-title">ЕДА</p>
+              </div>
+              <p class="detail__description text-description">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
+            </div>
+          </li>
+          <!-- /.advantages__item -->
           <li class="advantages__item advantage">
             <div class="advantage__header advantage__header--explicit">
               <div class="advantage__header-wrapper">
@@ -109,8 +117,12 @@
                 <p class="advantage__description advantage__description--explicit text-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               </div>
             </div>
+          </li>
+          <!-- /.advantages__item -->
+          <li class="advantages__item advantage advantage-pic">
             <img class="advantage__img" src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/main-bridge-mobile@1x.jpg" alt="Фото города">
           </li>
+          <!-- /.advantages__item -->
           <li class="advantages__item advantage">
             <div class="advantage__header">
               <div class="advantage__header-wrapper">
@@ -120,6 +132,7 @@
               </div>
             </div>
           </li>
+          <!-- /.advantages__item -->
           <li class="advantages__item advantage">
             <div class="advantage__header">
               <div class="advantage__header-wrapper">
@@ -129,6 +142,7 @@
               </div>
             </div>
           </li>
+          <!-- /.advantages__item -->
           <li class="advantages__item advantage">
             <div class="advantage__header">
               <div class="advantage__header-wrapper">
@@ -138,6 +152,7 @@
               </div>
             </div>
           </li>
+          <!-- /.advantages__item -->
         </ul>
         <!-- /.advantages__list -->
       </section>
