--- a/source/index.html
+++ b/source/index.html
@@ -11,25 +11,28 @@
         <img src="img/logo-sedona-mobile.svg" alt="Логотип">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a class="site-list__link" href="#">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="photo.html">Фото и видео</a>
-          </li>
-          <li class="site-list__item site-list__item--logo"></li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Форма Отзыва</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="#">HTML ACADEMY</a>
-          </li>
-        </ul>
-        <!-- /.site-list -->
+        <div class="main-nav__wrapper">
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a class="site-list__link" href="#">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="photo.html">Фото и видео</a>
+            </li>
+            <li class="site-list__item site-list__item--logo"></li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="form.html">Форма Отзыва</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">HTML ACADEMY</a>
+            </li>
+          </ul>
+          <!-- /.site-list -->
+        </div>
+
       </nav>
       <!-- /.main-nav -->
     </header>
@@ -75,7 +78,7 @@
             </div>
           </li>
           <!-- /.advantages__item -->
-          <li class="advantages__item advantage advantage-pic">     <!-- ! можно для блока advantage с фото сделать мод advantage--pic? -->
+          <li class="advantages__item advantage advantage--pic">     <!-- ! можно для блока advantage с фото сделать мод advantage--pic? -->
             <img class="advantage__img" src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/main-city-mobile@1x.jpg" alt="Фото города">
           </li>
           <!-- /.advantages__item -->
@@ -175,7 +178,8 @@
       <!-- /.map -->
 
       <footer class="page-footer">
-        <span class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</span>
+        <div class="page-footer__wrapper">
+          <span class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</span>
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
@@ -195,6 +199,8 @@
           <div class="copyright__icon"></div>
         </div>
         <!-- /.copyright -->
+        </div>
+        <!-- /.page-footer__wrapper -->
       </footer>
       <!-- /.page-footer -->
     </main>
