--- a/source/form.html
+++ b/source/form.html
@@ -7,11 +7,11 @@
 </head>
 <body class="page__body">
   <header class="page-header">
-    <a href="index.html" class="logo page-header__logo">
+    <a class="page-header__logo">
       <img src="img/logo-sedona-mobile.svg" alt="Логотип">
     </a>
-    <div class="main-nav__wrapper">
-      <nav class="main-nav visually-hidden">
+    <nav class="main-nav">
+      <div class="main-nav__wrapper">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -22,18 +22,19 @@
           <li class="site-list__item">
             <a class="site-list__link" href="photo.html">Фото и видео</a>
           </li>
+          <li class="site-list__item site-list__item--logo"></li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">Форма Отзыва</a>
+            <a class="site-list__link">Форма Отзыва</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="#">HTML ACADEMY</a>
           </li>
         </ul>
         <!-- /.site-list -->
-      </nav>
-      <!-- /.main-nav -->
-    </div>
-    <!-- /.main-nav__wrapper -->
+      </div>
+
+    </nav>
+    <!-- /.main-nav -->
   </header>
   <!-- /.page-header -->
 
@@ -46,7 +47,7 @@
     </div>
 
     <section class="review">
-      <div class="review-wrapper">
+
         <div class="review__header">
           <h2 class="review__header-title text-title">Оставьте свой отзыв</h2>
           <p class="review__header-text text-description text-description--sub">
@@ -139,13 +140,13 @@
           <button class="button button--submit">ОТПРАВИТЬ ОТЗЫВ</button>
         </form>
         <!-- /.review-form -->
-      </div>
-      <!-- /.review-wrapper -->
+
     </section>
     <!-- /.review -->
 
     <footer class="page-footer">
-      <span class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</span>
+      <div class="page-footer__wrapper">
+        <span class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</span>
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -165,6 +166,8 @@
         <div class="copyright__icon"></div>
       </div>
       <!-- /.copyright -->
+      </div>
+      <!-- /.page-footer__wrapper -->
     </footer>
     <!-- /.page-footer -->
 </main>
