--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
   <body class="page__body">
     <header class="page-header">
       <a class="page-header__logo">
-        <img src="img/logo-sedona-mobile.svg" alt="Логотип">
+        <img src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/logo-sedona-mobile.svg" alt="Логотип">
       </a>
       <nav class="main-nav">
         <div class="main-nav__wrapper">
@@ -78,7 +78,7 @@
             </div>
           </li>
           <!-- /.advantages__item -->
-          <li class="advantages__item advantage advantage--pic">     <!-- ! можно для блока advantage с фото сделать мод advantage--pic? -->
+          <li class="advantages__item advantage advantage--pic">
             <img class="advantage__img" src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/main-city-mobile@1x.jpg" alt="Фото города">
           </li>
           <!-- /.advantages__item -->
@@ -122,7 +122,7 @@
             </div>
           </li>
           <!-- /.advantages__item -->
-          <li class="advantages__item advantage advantage-pic">
+          <li class="advantages__item advantage advantage--pic">
             <img class="advantage__img" src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/main-bridge-mobile@1x.jpg" alt="Фото города">
           </li>
           <!-- /.advantages__item -->
