--- a/source/photo.html
+++ b/source/photo.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html class="page" lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta name="viewport"
+    content="width=device-width,initial-scale=1"
+    charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
