photo.html: сделал резиновую сетку блоков

--- a/source/photo.html
+++ b/source/photo.html
@@ -45,7 +45,9 @@
       Галерея
     </h1>
     <div class="gallery-intro page-intro">
-      <img src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/text-sedona.svg" alt="SEDONA" class="page-intro__img">
+      <div class="page-intro__background">
+        <img src="img/text-sedona.svg" alt="SEDONA" class="page-intro__img">
+      </div>
       <div class="page-intro__decoration"></div>
     </div>
 
@@ -56,11 +58,13 @@
       </header>
 
       <ul class="gallery__list">
-        <li class="gallery__item photo-card">
+        <li class="gallery__item gallery__item--main photo-card">
           <img src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/photo-sunset-mobile@1x.jpg" alt="Фото" class="photo-card__img">
           <div class="photo-card__info card-info">
-            <h3 class="card-info__title">Неродные просторы</h3>
-            <p class="card-info__author">Автор фото: Борис</p>
+            <div class="card-info__description">
+              <h3 class="card-info__title">Неродные просторы</h3>
+              <p class="card-info__author">Автор фото: Борис</p>
+            </div>
             <div class="card-info__likes likes">
               <div class="likes__icon"></div>
               <div class="likes__counter">1350</div>
@@ -70,8 +74,10 @@
         <li class="gallery__item photo-card">
           <img src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/photo-cactus-mobile@1x.jpg" alt="Фото" class="photo-card__img">
           <div class="photo-card__info card-info">
-            <h3 class="card-info__title">Местная растительность</h3>
-            <p class="card-info__author">Автор фото: Сергей</p>
+            <div class="card-info__description">
+              <h3 class="card-info__title">Местная растительность</h3>
+              <p class="card-info__author">Автор фото: Сергей</p>
+            </div>
             <div class="card-info__likes likes">
               <div class="likes__icon"></div>
               <div class="likes__counter">143</div>
@@ -81,8 +87,10 @@
         <li class="gallery__item photo-card">
           <img src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/photo-roads-mobile@1x.jpg" alt="Фото" class="photo-card__img">
           <div class="photo-card__info card-info">
-            <h3 class="card-info__title">Дорога на север</h3>
-            <p class="card-info__author">Автор фото: Петр</p>
+            <div class="card-info__description">
+              <h3 class="card-info__title">Дорога на север</h3>
+              <p class="card-info__author">Автор фото: Петр</p>
+            </div>
             <div class="card-info__likes likes">
               <div class="likes__icon"></div>
               <div class="likes__counter">96</div>
@@ -92,8 +100,10 @@
         <li class="gallery__item photo-card">
           <img src="https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/photo-bridge-mobile@1x.jpg" alt="Фото" class="photo-card__img">
           <div class="photo-card__info card-info">
-            <h3 class="card-info__title">Мост дьявола</h3>
-            <p class="card-info__author">Автор фото: Антон</p>
+            <div class="card-info__description">
+              <h3 class="card-info__title">Мост дьявола</h3>
+              <p class="card-info__author">Автор фото: Антон</p>
+            </div>
             <div class="card-info__likes likes">
               <div class="likes__icon"></div>
               <div class="likes__counter">254</div>
