Изменил url() путь для изображений и шрифтов

--- a/source/form.html
+++ b/source/form.html
@@ -47,7 +47,9 @@
       Форма отзыва
     </h1>
     <div class="review-intro page-intro">
-      <img src="img/text-sedona.svg" alt="SEDONA" class="page-intro__img">
+      <div class="page-intro__background">
+        <img src="img/text-sedona.svg" alt="SEDONA" class="page-intro__img">
+      </div>
     </div>
 
     <section class="review">
