Задал позиционирование лого, увеличил область клика ссылок меню, изменил стиль подписей к фотографиям на desktop версии

--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
 <body class="page__body">
   <header class="page-header">
     <div class="page-header__wrapper">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <img src="img/logo-sedona-mobile.svg" alt="Логотип">
       </a>
       <nav class="main-nav">
