--- a/source/photo.html
+++ b/source/photo.html
@@ -10,7 +10,7 @@
 <body class="page__body">
   <header class="page-header">
     <div class="page-header__wrapper">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <img src="img/logo-sedona-mobile.svg" alt="Логотип">
       </a>
       <nav class="main-nav">
